# Zetix

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .swiftformat  CLAUDE.md  CONTRIBUTING.md  FEATURE_STATUS.md  GAP_ANALYSIS.md  LICENSE  Makefile  README.md  TASKS.md  ruff.toml
.github/workflows/: ci.yml
apps/android/: Makefile  README.md
apps/ios/: Makefile  README.md
docs/: DEVELOPMENT.md  Zetix_PRD_v1.0.docx
docs/adr/: 0001-mono-repo-orchestration-make.md  0002-no-retention-of-fallback-vectors.md
models/: Makefile  README.md
models/eval/: README.md  __init__.py  __main__.py  conftest.py  dataset.py  harness.py  test_eval.py
server/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
server/admin-dashboard/: README.md  __init__.py  app.py  test_dashboard.py
server/admin-dashboard/templates/: base.html  index.html
server/api/zetix_api/: __init__.py  config.py  deps.py  factory.py  main.py  schemas.py  storage.py
server/api/zetix_api/db/: __init__.py  models.py
server/api/zetix_api/ingest/: __init__.py  csv_adapter.py  json_adapter.py  shopify_adapter.py
server/api/zetix_api/routers/: __init__.py  admin.py  search.py
server/api/zetix_api/services/: __init__.py  catalog.py  chroma_store.py  vector_store.py
server/embedding/zetix_embedding/: __init__.py  openclip.py  service.py
server/tests/: conftest.py  test_admin.py  test_chroma_store.py  test_db_models.py  test_health.py  test_ingest.py  test_openclip_embedder.py  test_search.py  test_shopify_adapter.py  test_storage.py
tools/: README.md
(+2 files in other folders)
