[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zetix-server"
version = "0.1.0"
description = "Zetix server pipeline — search API + embedding service (Phase 1 / EPIC-1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy ML / infra deps land with the parallel EPIC-1 agents (OpenCLIP, ChromaDB,
# SQLAlchemy/psycopg, etc.). The foundation runs on lightweight in-memory reference
# impls; each backend is selected at runtime via env (see zetix_api.factory).
ml = ["open-clip-torch>=2.24", "torch>=2.2", "pillow>=10.0"]
store = ["chromadb>=0.5"]
db = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1"]
ingest = ["httpx>=0.27"]
storage = ["boto3>=1.34"]
dashboard = ["jinja2>=3.1"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["api/zetix_api", "embedding/zetix_embedding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["api", "embedding"]
